--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -6,7 +6,7 @@
   font-size: 1.5rem; // The __text child of this element inherits this font-size
   padding: 2.5rem;
   text-align: center; // All children inherit this
-  border-radius: 3px;
+  border-radius: $border-radius-small;
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
 
   transition: transform 0.3s;
