--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -55,8 +55,17 @@
 }
 
 .booking {
-  background-image: url(../images/nat-10.jpg);
+  background-image: linear-gradient(
+      105deg,
+      rgba($color-white, 0.9) 0%,
+      rgba($color-white, 0.9) 50%,
+      transparent 50%
+    ),
+    url(../images/nat-10.jpg);
   background-size: cover; //
   border-radius: $border-radius-small;
+  box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
+
+  // *testing* //
   height: 50rem;
 }
