booking form skeleton build and sass file imported into the main sass file

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,6 +15,7 @@
 @import './components/card';
 @import './components/testimonial';
 @import './components/bg-video';
+@import './components/form';
 
 @import './layout/grid';
 @import './layout/header';
