--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -55,13 +55,15 @@
 }
 
 .booking {
+  padding: 5rem;
+  // At 0% it is white, and by 50% it is still white, but at that same exact spot it becomes transparent, and created a line effect similar to clip path polygon
   background-image: linear-gradient(
       105deg,
       rgba($color-white, 0.9) 0%,
       rgba($color-white, 0.9) 50%,
       transparent 50%
     ),
-    url(../images/nat-10.jpg);
+    url(../images/nat-10.jpg); // This is a second background-image property behind the gradient
   background-size: cover; //
   border-radius: $border-radius-small;
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
