--- a/src/css/style.css
+++ b/src/css/style.css
@@ -458,6 +458,7 @@ body {
   background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
 
 .booking {
+  padding: 5rem;
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../images/nat-10.jpg);
   background-size: cover;
   border-radius: 3px;
