created new dark grey variable

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -384,6 +384,27 @@ body {
     width: 100%;
     object-fit: cover; }
 
+.form__group {
+  margin-bottom: 2rem; }
+
+.form__input {
+  font-size: 1.5rem;
+  font-family: inherit;
+  padding: 1.5rem 2rem;
+  border-radius: 2px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border: none;
+  border-bottom: 3px solid transparent;
+  width: 90%;
+  display: block; }
+  .form__input:focus {
+    outline: none;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+    border-bottom: 3px solid #ff7730; }
+
+.form__label {
+  color: orangered; }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
@@ -458,9 +479,12 @@ body {
   background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
 
 .booking {
-  padding: 5rem;
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../images/nat-10.jpg);
   background-size: cover;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
   height: 50rem; }
+  .booking__form {
+    width: 50%;
+    height: 100%;
+    padding: 6rem; }
