--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -1,10 +1,31 @@
 .form {
+  &__group {
+    margin-bottom: 2rem;
+  }
+
   &__input {
+    font-size: 1.5rem;
+    font-family: inherit; // font-family does not inherit by default on form elements so we have to do it manually (we do this instead of hard setting a font because it makes it easier to edit the site later)
+    padding: 1.5rem 2rem;
+    border-radius: 2px;
+    background-color: rgba($color-white, 0.5);
+    border: none;
+    border-bottom: 3px solid transparent;
+    width: 90%;
+    display: block;
+
+    &:focus {
+      outline: none;
+      box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
+      border-bottom: 3px solid $color-secondary-dark;
+    }
+  }
+
+  &::-webkit-input-placeholder {
+    color: $color-secondary-dark;
   }
 
   &__label {
-  }
-
-  &__group {
+    color: orangered;
   }
 }
