--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -6,6 +6,7 @@
   &__input {
     font-size: 1.5rem;
     font-family: inherit; // font-family does not inherit by default on form elements so we have to do it manually (we do this instead of hard setting a font because it makes it easier to edit the site later)
+    color: inherit;
     padding: 1.5rem 2rem;
     border-radius: 2px;
     background-color: rgba($color-white, 0.5);
@@ -19,10 +20,10 @@
       box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
       border-bottom: 3px solid $color-secondary-dark;
     }
-  }
 
-  &::-webkit-input-placeholder {
-    color: $color-secondary-dark;
+    &::-webkit-input-placeholder {
+      color: $color-grey-dark-2;
+    }
   }
 
   &__label {
