--- a/src/css/style.css
+++ b/src/css/style.css
@@ -404,11 +404,19 @@ body {
     border-bottom: 3px solid #55c57a; }
     .form__input:focus:invalid {
       border-bottom: 3px solid #ff7730; }
-  .form__input::-webkit-input-placeholder {
+  .form__input::placeholder, .form__input::-webkit-input-placeholder {
     color: #999; }
 
 .form__label {
-  color: orangered; }
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-left: 2rem;
+  margin-top: 0.7rem;
+  display: block;
+  transition: all 0.4s; }
+
+.form__input:placeholder-shown + .form__label {
+  opacity: 0; }
 
 .row {
   max-width: 114rem;
