placeholder shown effect hiding and showing a sibling element with the sibling selector working

--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -45,5 +45,6 @@
   // + is the adjacent sibling selector (the adjacent sibling is the one immidiately after (NOT BEFORE))
   &__input:placeholder-shown + &__label {
     opacity: 0;
+    visibility: hidden;
   }
 }
