--- a/src/css/style.css
+++ b/src/css/style.css
@@ -416,7 +416,9 @@ body {
   transition: all 0.4s; }
 
 .form__input:placeholder-shown + .form__label {
-  opacity: 0; }
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-4rem); }
 
 .row {
   max-width: 114rem;
