--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -15,6 +15,8 @@
     width: 90%;
     display: block;
 
+    transition: all 0.3s;
+
     &:focus {
       outline: none;
       box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
