added css selector for the radio buttons (custom)

--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -53,7 +53,7 @@
 
   // RADIO GROUP AND BUTTONS
   &__radio-group {
-    width: 50%;
+    width: 50%; // *** May need to decrease this
     display: inline-block; // so that they will display side by side with 50& of each side
   }
 
