--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -59,5 +59,41 @@
 
   &__radio-label {
     font-size: $default-font-size;
+    cursor: pointer;
+    position: relative; // XCZ
+    padding-left: 4rem; // To give space to the custon button
+  }
+
+  &__radio-button {
+    height: 3rem;
+    width: 3rem;
+    border: 5px solid $color-primary;
+    border-radius: 50%;
+    display: inline-block; // The above declarations only work on block elements
+
+    position: absolute; // XCZ
+    left: 0;
+    top: -0.4rem;
+
+    &::after {
+      content: ''; // Always have to set the content of a pseudo-element
+      display: block; // Always have to set the content of a pseudo-element
+      height: 1.3rem;
+      width: 1.3rem;
+      border-radius: 50%;
+
+      position: absolute; // This will be in relation to the last absolute position because it works the same as relative // XCZ
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: $color-primary;
+      opacity: 0; // This is for initial state (since it will be unselected)
+
+      transition: all 0.2s;
+    }
+  }
+
+  &__radio-input:checked + &__radio-label &__radio-button::after {
+    opacity: 1; //
   }
 }
