--- a/src/css/style.css
+++ b/src/css/style.css
@@ -450,12 +450,13 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #55c57a;
+    background-color: #7ed56f;
     opacity: 0;
-    transition: all 0.2s; }
+    transition: all 0.4s; }
 
 .form__radio-input:checked + .form__radio-label .form__radio-button::after {
-  opacity: 1; }
+  opacity: 1;
+  background-color: #55c57a; }
 
 .row {
   max-width: 114rem;
