display: none for the radio inputs instead of visibility: hidden because it actually takes them out of the flow completely (not just invisible)

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -426,7 +426,7 @@ body {
   display: inline-block; }
 
 .form__radio-input {
-  visibility: hidden; }
+  display: none; }
 
 .form__radio-label {
   font-size: 1.6rem;
