--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -36,13 +36,20 @@
 // This class is for the hikes section but it is unique to this webpage rather than a commonly reusable componenet, so it is in _home
 .section-hikes {
   background-color: $color-grey-light-1;
-  padding: 25rem 0 15rem 0;
+  padding: 25rem 0 10rem 0; // ##### 25rem 15rem
   margin-top: -10rem; // To cover up the white space left by the skewed section
 }
 
 .section-testimonials {
-  padding: 10rem 0;
+  padding: 12rem 0; // #### 10rem
   position: relative;
+
+  // Added this fade in effect
+  background-image: linear-gradient(
+    to bottom,
+    rgba($color-grey-light-1, 1) 0%,
+    transparent 5%
+  );
 }
 
 .section-booking {
@@ -66,9 +73,6 @@
   background-size: cover; //
   border-radius: $border-radius-small;
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
-
-  // *testing* //
-  height: 50rem;
 
   &__form {
     width: 50%;
