some small css changes and began the footer component

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -530,7 +530,7 @@ body {
   margin-top: -10rem; }
 
 .section-testimonials {
-  padding: 12rem 0;
+  padding: 13rem 0 9rem 0;
   position: relative;
   background-image: linear-gradient(to bottom, #f7f7f7 0%, transparent 5%); }
 
