--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -41,7 +41,7 @@
 }
 
 .section-testimonials {
-  padding: 12rem 0; // #### 10rem
+  padding: 13rem 0 9rem 0; // #### 10rem
   position: relative;
 
   // Added this fade in effect
