created footer sass file and imported it into the main sass file

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,5 +19,4 @@
 
 @import './layout/grid';
 @import './layout/header';
-
-@import './pages/home';
+@import './layout/footer;' @import './pages/home';
