added basic padding and color styles to the footer

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,4 +19,6 @@
 
 @import './layout/grid';
 @import './layout/header';
-@import './layout/footer;' @import './pages/home';
+@import './layout/footer';
+
+@import './pages/home';
