--- a/src/css/style.css
+++ b/src/css/style.css
@@ -510,6 +510,11 @@ body {
     transform: translate(-50%, -50%);
     text-align: center; }
 
+.footer {
+  background-color: #333;
+  padding: 10rem 0;
+  font-size: 1.4rem; }
+
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0;
