fixed li elements so they appear as a list now

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -514,6 +514,9 @@ body {
   background-color: #333;
   padding: 10rem 0;
   font-size: 1.4rem; }
+  .footer__logo {
+    width: 15rem;
+    height: auto; }
 
 .section-about {
   background-color: #f7f7f7;
