--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -2,4 +2,9 @@
   background-color: $color-grey-dark-3;
   padding: 10rem 0;
   font-size: 1.4rem;
+
+  &__logo {
+    width: 15rem;
+    height: auto;
+  }
 }
