--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -5,7 +5,7 @@ body {
   font-weight: 400;
   //   font-size: 1.6rem;
   line-height: 1.7; // 1.7x larger than the default
-  color: $color-grey-dark;
+  color: $color-grey-dark-1;
   padding: 3rem;
 }
 
