--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -14,7 +14,8 @@
   }
 
   &__navigation {
-    background-color: orangered;
+    border-top: 1px solid $color-grey-dark-1;
+    padding-top: 2rem;
   }
 
   &__list {
