footer done, now creating component for the navigation

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -522,7 +522,8 @@ body {
     height: auto; }
   .footer__navigation {
     border-top: 1px solid #777;
-    padding-top: 2rem; }
+    padding-top: 2rem;
+    display: inline-block; }
   .footer__list {
     list-style: none; }
   .footer__item {
@@ -540,6 +541,11 @@ body {
     color: #55c57a;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
     transform: rotate(5deg) scale(1.2); }
+  .footer__copyright {
+    border-top: 1px solid #777;
+    padding-top: 2rem;
+    width: 80%;
+    float: right; }
 
 .section-about {
   background-color: #f7f7f7;
