--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,24 +1,30 @@
-/* Style imports */
+/* Style imports (Every partial imported into here will be available app-wide) */
 
+// Abstracts
 @import './abstracts/functions';
 @import './abstracts/mixins';
 @import './abstracts/variables';
 
+// Base
 @import './base/animations';
 @import './base/base';
 @import './base/typography';
 @import './base/utilities';
 
+// Components
 @import './components/button';
 @import './components/composition';
 @import './components/feature-box';
 @import './components/card';
 @import './components/testimonial';
 @import './components/bg-video';
-@import './components/form';
+@import './components/booking-form';
 
+// Layout
 @import './layout/grid';
 @import './layout/header';
 @import './layout/footer';
+@import './layout/navigation';
 
+// Pages
 @import './pages/home';
