--- a/src/sass/layout/_navigation.scss
+++ b/src/sass/layout/_navigation.scss
@@ -11,7 +11,7 @@
     top: 6rem; // Less far from the edges than the background because it is a rem larger
     right: 6rem; // Less far from the edges than the background because it is a rem larger
     border-radius: 50%; // Circle shape
-    z-index: 200;
+    z-index: 300;
   }
 
   &__background {
@@ -32,16 +32,22 @@
   }
 
   &__nav {
-    background-color: orangered;
+    // Giant container spanning the entire viewport
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 200;
   }
   &__list {
-    background-color: orangered;
+    background-color: transparent;
   }
   &__item {
-    background-color: orangered;
+    background-color: transparent;
   }
   &__link {
-    background-color: orangered;
+    background-color: transparent;
   }
 
   &__checkbox:checked ~ &__background {
