--- a/src/css/style.css
+++ b/src/css/style.css
@@ -505,6 +505,7 @@ body {
     height: 3.5rem; }
   .header__text-box {
     position: absolute;
+    position: absolute;
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
