--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -1,4 +1,5 @@
 // Mixins are reusable pieces of code that can be included in other css
+
 @mixin clearfix {
   // & will translate to whatever css selector we are within when we call the mixin then it will add ::after to that
   &::after {
@@ -16,4 +17,11 @@
   background-image: linear-gradient($direction, $colorOne, $colorTwo);
   background-clip: text;
   color: transparent;
+}
+
+@mixin absolute-center($top: 50%, $left: 50%) {
+  position: absolute;
+  top: $top;
+  left: $left;
+  transform: translate(-50%, -50%);
 }
