--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -176,10 +176,7 @@
 
   // BACK SIDE STYLING
   &__cta {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    @include absolute-center;
     width: 90%;
     text-align: center;
   }
