--- a/src/css/style.css
+++ b/src/css/style.css
@@ -585,13 +585,31 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  list-style: none; }
+  list-style: none;
+  text-align: center; }
 
 .navigation__item {
-  background-color: transparent; }
+  margin: 1rem;
+  transition: all 0.2s; }
+  .navigation__item:hover {
+    background-size: 200; }
 
-.navigation__link {
-  background-color: transparent; }
+.navigation__link:link, .navigation__link:visited {
+  display: inline-block;
+  font-size: 3rem;
+  font-weight: 300;
+  padding: 1rem 2rem;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
+  background-size: 240%;
+  transition: all 0.4s; }
+
+.navigation__link:hover, .navigation__link:active {
+  background-position: 100%;
+  color: #55c57a;
+  transform: translateX(1rem); }
 
 .navigation__checkbox:checked ~ .navigation__background {
   transform: scale(100); }
