--- a/src/sass/layout/_navigation.scss
+++ b/src/sass/layout/_navigation.scss
@@ -43,12 +43,46 @@
   &__list {
     @include absolute-center;
     list-style: none;
+    text-align: center;
   }
   &__item {
-    background-color: transparent;
+    margin: 1rem;
+
+    transition: all 0.2s;
+
+    &:hover {
+      background-size: 200;
+    }
   }
   &__link {
-    background-color: transparent;
+    &:link,
+    &:visited {
+      display: inline-block;
+      font-size: 3rem;
+      font-weight: 300;
+      padding: 1rem 2rem;
+      color: $color-white;
+      text-decoration: none;
+      text-transform: uppercase;
+
+      background-image: linear-gradient(
+        120deg,
+        transparent 0%,
+        transparent 50%,
+        $color-white 50%
+      );
+
+      background-size: 240%;
+
+      transition: all 0.4s;
+    }
+
+    &:hover,
+    &:active {
+      background-position: 100%;
+      color: $color-primary;
+      transform: translateX(1rem);
+    }
   }
 
   &__checkbox:checked ~ &__background {
